--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <title>hiSTORYcalMEMory</title>
 </head>
 
-<body class="body_hide">
-    <div class="form-container form-container--disabled">
-
-    </div>
+<body>
     <header class="header">
         <div class="nav__fixed">
             <div class="header-container flex">
@@ -43,56 +40,8 @@
         <section class="hero hero-container hero-container__gap container">
             <h1 class="hero__titel">Просопографическое <br> исследование <br> Крестьян</h1>
             <p class="hero__slogan">
-                Пишем историю <br> не зная её
+                Пишем историю
             </p>
-        </section>
-        <section class="work work-container container">
-            <div class="work__grid grid">
-                <div class="card flex">
-                    <img src="https://imgholder.ru/288x397/8493a8/adb9ca&text=картинка&font=robotoslab&fz=50"
-                        alt="sdfasf" class="card__image">
-                    <div class="card__wrapper flex">
-                        <div class="card__info flex">
-                            <p class="card__category">КАТЕГОРИЯ - ЕЩЁ - ЕЩЁ</p>
-                            <p class="card__year">2023</p>
-                        </div>
-                        <p class="card__label">Название</p>
-                    </div>
-                </div>
-                <div class="card flex">
-                    <img src="https://imgholder.ru/288x397/8493a8/adb9ca&text=картинка&font=robotoslab&fz=50"
-                        alt="sdfasf" class="card__image">
-                    <div class="card__wrapper flex">
-                        <div class="card__info flex">
-                            <p class="card__category">КАТЕГОРИЯ - ЕЩЁ - ЕЩЁ</p>
-                            <p class="card__year">2023</p>
-                        </div>
-                        <p class="card__label">Название</p>
-                    </div>
-                </div>
-                <div class="card flex">
-                    <img src="https://imgholder.ru/288x397/8493a8/adb9ca&text=картинка&font=robotoslab&fz=50"
-                        alt="sdfasf" class="card__image">
-                    <div class="card__wrapper flex">
-                        <div class="card__info flex">
-                            <p class="card__category">КАТЕГОРИЯ - ЕЩЁ - ЕЩЁ</p>
-                            <p class="card__year">2023</p>
-                        </div>
-                        <p class="card__label">Название</p>
-                    </div>
-                </div>
-                <div class="card flex">
-                    <img src="https://imgholder.ru/288x397/8493a8/adb9ca&text=картинка&font=robotoslab&fz=50"
-                        alt="sdfasf" class="card__image">
-                    <div class="card__wrapper flex">
-                        <div class="card__info flex">
-                            <p class="card__category">КАТЕГОРИЯ - ЕЩЁ - ЕЩЁ</p>
-                            <p class="card__year">2023</p>
-                        </div>
-                        <p class="card__label">Название</p>
-                    </div>
-                </div>
-            </div>
         </section>
         <section class="about about-container container">
             <h2 class="section__titel about__titel">
@@ -111,10 +60,107 @@
                         из технического университета Тамбова пишут ход истории
                         не вникая в неё - в этом их преимущество.
                     </p>
-                    <a href="#" class="btn about__btn">О нас</a>
-                    <a href="#" class="btn btn--active about__btn about__btn--active">Узнать кто мы</a>
+                    <a href="#" class="btn btn--active about__btn">Узнать кто мы</a>
                 </div>
             </div>
+        </section>
+        <section class="order order-container container">
+            <h2 class="section__titel order__titel">
+                Стоимость исследованя
+            </h2>
+            <div class="order__info flex">
+                <ul class="order__list list flex">
+                    <p class="list__titel">На стоимость исследования влияет:</p>
+                    <li class="list__item">1. Масштабность</li>
+                    <li class="list__item">2. Временные границы</li>
+                    <li class="list__item">3. Сроки работы</li>
+                    <li class="list__item">4. Углубленность и сложность исследования</li>
+                </ul>
+                <div class="order__right">
+                    <p class="order__about">
+                        Перед тем, как сделать заказ на исследование нужно определить цель и обозначить конкретные
+                        желания.
+                    </p>
+                    <p class="order__link">
+                        Связаться с нами: <a href="tel:+79953695864" class="order__tel">+7(995) 369-58-64</a>
+                    </p>
+                </div>
+            </div>
+            <h3 class="form__titel">Заполните бриф</h3>
+            <form action="" method="" class="order__form form">
+                <div class="form__exp">
+                    <label for="from__person" class="form__label">
+                        Контактное лицо:
+                    </label>
+                    <input type="text" name="form__person" class="form__input" required>
+                </div>
+                <div class="form__exp">
+                    <label for="from__org" class="form__label">
+                        Организация:
+                    </label>
+                    <input type="text" name="form__org" class="form__input required">
+                </div>
+                <div class="form__exp">
+                    <label for="from__purpose" class="form__label">
+                        Цель проекта, его краткое описание:
+                    </label>
+                    <textarea type="text" name="form__purpose" class="form__input"></textarea>
+                </div>
+                <div class="form__exp">
+                    <label for="from__org" class="form__label">
+                        Целевая аудитория:
+                    </label>
+                    <input type="text" name="form__org" class="form__input">
+                </div>
+                <div class="form__exp">
+                    <label for="from__purpose" class="form__label">
+                        Как будут использоваться полученные результаты:
+                    </label>
+                    <textarea type="text" name="form__purpose" class="form__input"></textarea>
+                </div>
+                <div class="form__exp">
+                    <label for="from__deadlines" class="form__label">
+                        Сроки проведения:
+                    </label>
+                    <input type="text" name="form__deadlines" class="form__input">
+                </div>
+                <div class="form__exp">
+                    <label for="from__geography" class="form__label">
+                        География исследования:
+                    </label>
+                    <input type="text" name="form__geography" class="form__input">
+                </div>
+                <div class="form__exp">
+                    <label for="from__cost" class="form__label">
+                        Предполагаемый бюджет, рублей:
+                    </label>
+                    <input type="text" name="form__cost" class="form__input">
+                </div>
+                <div class="form__exp">
+                    <label for="from__cost" class="form__label">
+                        Дополнительная информация по проекту:
+                    </label>
+                    <input type="text" name="form__cost" class="form__input">
+                </div>
+                <div class="form__exp">
+                    <label for="from__cost" class="form__label">
+                        Email:
+                    </label>
+                    <input type="text" name="form__cost" class="form__input" required>
+                </div>
+                <div class="form__exp">
+                    <label for="from__cost" class="form__label">
+                        Контактный телефон:
+                    </label>
+                    <input type="text" name="form__cost" class="form__input">
+                </div>
+                <div class="form__avalid">
+                    <input type="checkbox" class="form__accept" required>
+                    <label for="from__accept">Я согласен(а) на обработку персональных данных</label>
+                </div>
+                <button class="form__btn">Отправить</button>
+            </form>
+
         </section>
     </main>
     <footer class="footer footer-container container">
@@ -126,15 +172,11 @@
                     <a href="#" class="social__link">Telegram</a>
                     <a href="#" class="social__link">YouTube</a>
                 </div>
-                <p class="upper">Вернуться наверх</p>
+                <a href="#" class="upper">Вернуться наверх</a>
             </div>
         </div>
     </footer>
-    <script>
-        setTimeout(function () {
-            document.body.classList.add('body_visible');
-        }, 200);
-    </script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
