--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         из технического университета Тамбова пишут ход истории
                         не вникая в неё - в этом их преимущество.
                     </p>
-                    <a href="#" class="btn btn--active about__btn">Узнать кто мы</a>
+                    <a href="#" class="btn about__btn">Узнать кто мы</a>
                 </div>
             </div>
         </section>
@@ -86,7 +86,7 @@
                     </p>
                 </div>
             </div>
-            <h3 class="form__titel">Заполните бриф</h3>
+            <h3 class="form__titel section__titel">Заполните бриф</h3>
             <form action="" method="" class="order__form form">
                 <div class="form__exp">
                     <label for="from__person" class="form__label">
@@ -154,11 +154,11 @@
                     </label>
                     <input type="text" name="form__cost" class="form__input">
                 </div>
-                <div class="form__avalid">
+                <div class="form__avalid flex">
                     <input type="checkbox" class="form__accept" required>
-                    <label for="from__accept">Я согласен(а) на обработку персональных данных</label>
+                    <label for="from__accept" class="form__label">Я согласен(а) на обработку персональных данных</label>
                 </div>
-                <button class="form__btn">Отправить</button>
+                <button class="form__btn btn">Отправить</button>
             </form>
 
         </section>
