--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
 </head>
 
 <body>
+    <div class="menu_mobile">
+        <ul class="flex menu_list_mobile">
+            <li class="nav_mobile__item">
+                <a href="#" class="nav_mobile__link">О нас</a>
+            </li>
+            <li class="nav_mobile__item">
+                <a href="#" class="nav_mobile__link">Связаться</a>
+            </li>
+            <li class="nav_mobile__item">
+                <a href="#" class="nav_mobile__link">Личный кабинет</a>
+            </li>
+        </ul>
+        <p class="menu__close">Закрыть</p>
+    </div>
     <header class="header">
         <div class="nav__fixed">
             <div class="header-container flex">
@@ -37,10 +51,10 @@
         </div>
     </header>
     <main class="main">
-        <section class="hero hero-container hero-container__gap container">
-            <h1 class="hero__titel">Просопографическое <br> исследование <br> Крестьян</h1>
+        <section class="hero hero-container container flex">
+            <h1 class="hero__titel">HisMemory</h1>
             <p class="hero__slogan">
-                Пишем историю
+                Ваша память - наша история
             </p>
         </section>
         <section class="about about-container container">
@@ -50,17 +64,16 @@
             <div class="flex about__text">
                 <div class="about__left">
                     <p class="about__slogan">
-                        Подробно про ваш проект много <br> много много много много много много.
+                        HisMemory - статистический центр, занимающийся проведением просопографических исследований.
                     </p>
                 </div>
                 <div class="about__right">
                     <p class="about__info">
-                        hiSTORYcalMEMory - между народная ведущая компания в
-                        области просопографических исследований. Специалисты
-                        из технического университета Тамбова пишут ход истории
-                        не вникая в неё - в этом их преимущество.
+                        Мы собираем и анализируем большой объём данных о нашем общем прошлом и запечатляем ихна
+                        страницах. Наши услуги необходимы вам, если вы занимаетесь историческим исследованием, ведь мы
+                        поможем вам сэкономить самый важный и дорогой ресурс - время.
                     </p>
-                    <a href="#" class="btn about__btn">Узнать кто мы</a>
+                    <a href="#" class="btn about__btn">УЗНАТЬ КТО МЫ</a>
                 </div>
             </div>
         </section>
